# pii-rust-worker

./: .gitignore  Cargo.toml  README.md  notes.md  wrangler.toml
examples/: test_pii.rs
src/: lib.rs
