[package]
name = "gliner-rust-worker"
version = "0.1.0"
edition = "2021"
authors = [ "sidmohan <sidmohan001@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "gliner_rust_worker"
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.5.0", features = ["http", "axum"] }
worker-macros = { version="0.5.0", features=['http'] }
axum  = { version = "0.7", default-features = false, features = ["json"] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
regex = "1.11.1"
sha2 = "0.10.9"
once_cell = "1.21.3"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
thiserror = "1.0.50"
